# sysdirs

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh  rustfmt.toml
.github/workflows/: ci.yml
src/: android.rs  apple.rs  lib.rs  linux.rs  unix.rs  wasm.rs  windows.rs
tests/: android_init.rs  apple_domains.rs  linux_integration.rs  path_ext.rs  tilde_expansion.rs  unix_integration.rs  xdg_fallbacks.rs
